# Code-Practice

./: .gitignore  README.md  commit_test.txt  git_test.txt  gitflow_test.md
01.Encore_Bootcamp/02.mysql/: __sample_table_insert.sql  readme.md
01.Encore_Bootcamp/03.OpenCV/: 1일차복습.ipynb  a.avi  cat3.avi  opencv_14.ipynb  opencv_8.ipynb  project.ipynb
01.Encore_Bootcamp/OpenCV/: b.avi  cat2.avi  cat4.avi  opencv_10.ipynb  opencv_11.ipynb  opencv_12.ipynb  opencv_2.ipynb  opencv_5 (복습용).ipynb  opencv_7.ipynb  opencv_9.ipynb  trainer.yml  부록_haar_face_recog.ipynb
02.Machine Learning/파이썬 머신러닝 완벽가이드/: 003.피마 인디언 당뇨병 예측을 통한 평가 실습.ipynb  004.위스콘신 유방암 데이터를 활용한 앙상블 실습.ipynb
03.Django/02.newbie_study/: counter.py  docker-compose.yaml  dockerfile  manage.py  requirements.txt  sample.conf  supervisord.conf
03.Django/03.musicapp/: docker-compose.yml  dockerfile  pyproject.toml  readme.md
03.Django/03.musicapp/app/: manage.py  setup.cfg
03.Django/03.musicapp/app/musicapi/: asgi.py  settings.py  urls.py  wsgi.py
03.Django/03.musicapp/app/musicapi/app/: apps.py  models.py  serializers.py  urls.py  views.py
03.Django/03.musicapp/nginx.conf/: nginx.conf
03.Django/03.reproduce/: docker-compose.yaml  dockerfile
04.VanillaJS/#Todo_app/: index.html  musictest.html
04.VanillaJS/challenge_2/: index.html
04.VanillaJS/challenge_3/: index.html
04.VanillaJS/challenge_5/: index.html
05.NodeJS/01.Intro/: index.html  package-lock.json  package.json  server.js
05.NodeJS/01.helloworld/: app.ts  package-lock.json  package.json  tsconfig.json
Encore/: README.md
(+414 files in other folders)
